namespace Calendar.Domain.Enums;

public enum EventStatus
{
    Upcoming,
    Live,
    Past,
    Cancelled
}
