namespace Calendar.Domain.Enums;

public enum ReminderMethod
{
    Email,
    Push,
    InApp
}
