namespace Calendar.Domain.Enums;

public enum StreamPlatform
{
    YouTube,
    Twitch,
    Holodex,
    Other
}
